RFC79: Incremental Upload of Data Entries (#48)
* Add clinical_attribute_meta records to the seed mini

To make the dataset look like real data in the database

* Implement sample attribute rewriting flag

* Add --overwrite-existing for the rest of test cases

Apperently, the flag does not change anything.
But we add it anyway as the tests for "incremental" data upload.

* Test that mutations stay after updating the sample attributes

* Add overwrite-existing support for mutations data

* Fix --overwirte-existing flag description for importer of profile data

* Add loader command to update case list with sample ids

adding to the all case list and case list specified with command arguments is supported

* Add option to remove sample ids from the remaining case lists

From case lists that is not _all case list and not specified with --add-to-case-lists option

* Make removing sample ids from not mentioned case lists a default behaviour

* Make update case list command to read case lists files

* Fix test clinical data headers

* Test incremental patient upload

* Add flag to reload patient clinical attributes

* Add TODO comment to remove MIXED_ATTRIBUTES data type

with a reference to the ticket

* WIP adopt py script to incremental upload

* Fix java.sql.SQLException: Generated keys not requested

* Clean alteration_driver_annotation during mutations inc. upload

* Fix validator and importer py scripts for inc. upload

* Add test/demo data for incremental loading of study_es_0 study

* Rename and move incremental tests to incementalTest folder

* Update TODO comment how to deal with multiple sample files

* Move study_es_0_inc to the new test data folder

* Fix removing patient attributes on samples inc. upload

* Change study_es_0_inc to contain more diverse data

We changed them to work for the demo.
Mutation numbers did not change on demo.

* Specify that data_directory for incremental data

* Disam